--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.7",
     "deep-chat-react": "^1.4.10",
+    "microsoft-cognitiveservices-speech-sdk": "^1.35.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
